# nr-isaac-format

./: .env.example  .gitignore  README.md  architecture.md  pyproject.toml
.github/workflows/: ci.yml
docs/: implementation-plan.md  project.md
output/: isaac_record.json  isaac_record_218386.json  isaac_record_218393.json
src/nr_isaac_format/: __init__.py  cli.py  client.py  constants.py  converter.py  result_manifest.py  ulid.py  writer.py
src/nr_isaac_format/mappers/: __init__.py  acquisition_source.py  assets.py  base.py  context.py  descriptors.py  links.py  measurement.py  sample.py  system.py  timestamps.py
src/nr_isaac_format/schema/: SCHEMA_CHANGELOG.md  isaac_record_v1-ornl-rev1.json  isaac_record_v1-ornl-rev2.json  isaac_record_v1-ornl-rev3.json  isaac_record_v1-ornl-rev4.json  isaac_record_v1.json
tests/: __init__.py  test_assets_mapper.py  test_cli.py  test_cli_contract.py  test_client.py  test_context_mapper.py  test_convert_ingest_cli.py  test_convert_ingest_state.py  test_converter.py  test_edge_cases.py  test_golden_records.py  test_integration.py  test_links_mapper.py  test_mappers.py  test_performance.py  test_push.py  test_result_manifest_contract.py  test_sample_mapper.py  test_system_mapper.py  test_writer.py
tests/fixtures/: __init__.py  assembly_results.py  golden_records.py
